Started migration to IP 5